--- a/src/main/webapp/app/entities/audio-file/audio-file-detail.component.html
+++ b/src/main/webapp/app/entities/audio-file/audio-file-detail.component.html
@@ -1,29 +1,29 @@
 <div class="row justify-content-center">
     <div class="col-8">
         <div *ngIf="audioFile">
-            <h2><span jhiTranslate="soundgramApp.audioFile.detail.title">Audio File</span> {{audioFile.id}}</h2>
+            <h2><span jhiTranslate="soundgramApp.audioFile.detail.title">Audio File</span> {{audioFile.title.split('.').slice(0, -1).join('.')}}</h2>
             <hr>
             <jhi-alert-error></jhi-alert-error>
             <dl class="row-md jh-entity-details">
-                <dt><span jhiTranslate="soundgramApp.audioFile.audioPath">Audio Path</span></dt>
+<!--                <dt><span jhiTranslate="soundgramApp.audioFile.audioPath">Audio Path</span></dt>
                 <dd>
                     <span>{{audioFile.audioPath}}</span>
-                </dd>
+                </dd>-->
                 <dt><span jhiTranslate="soundgramApp.audioFile.title">Title</span></dt>
                 <dd>
-                    <span>{{audioFile.title}}</span>
+                    <span>{{audioFile.title.split('.').slice(0, -1).join('.')}}</span>
                 </dd>
-                <dt><span jhiTranslate="soundgramApp.audioFile.iconPath">Icon Path</span></dt>
+                <dt><span jhiTranslate="soundgramApp.audioFile.owner">File owner</span></dt>
                 <dd>
-                    <span>{{audioFile.iconPath}}</span>
+                    <span><a [routerLink]="['/', audioFile.post.user.login, 'view']">{{audioFile.post.user.login}}</a></span>
                 </dd>
-                <dt><span jhiTranslate="soundgramApp.audioFile.post">Post</span></dt>
+                <!--<dt><span jhiTranslate="soundgramApp.audioFile.post">Post</span></dt>
                 <dd>
                     <div *ngIf="audioFile.post">
                         <a [routerLink]="['/post', audioFile.post?.id, 'view']">{{audioFile.post?.id}}</a>
                     </div>
-                </dd>
-                <dt><span jhiTranslate="soundgramApp.audioFile.user">User</span></dt>
+                </dd>-->
+                <dt><span jhiTranslate="soundgramApp.audioFile.user">User</span><span>{{audioFile.users.length}}</span></dt>
                 <dd>
                     <span *ngFor="let user of audioFile.users; let last = last">
                         <a [routerLink]="['/', user.login, 'view']">{{user.login}}{{last ? '' : ', '}}</a>
@@ -37,10 +37,27 @@
                 <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back"> Back</span>
             </button>
 
-            <button type="button"
+            <button type="submit"
+                    [routerLink]="['/post', audioFile.post.id, 'view' ]"
+                    class="btn btn-info">
+                <fa-icon [icon]="'eye'"></fa-icon>&nbsp;<span>View Post</span>
+            </button>
+
+<!--            <button type="button"
                     [routerLink]="['/audio-file', audioFile.id, 'edit']"
                     class="btn btn-primary">
                 <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit"> Edit</span>
+            </button>-->
+
+            <button class="btn btn-primary" (click)="likeOrDislikeAudioFile()">
+                <div *ngIf="liked">
+                    <fa-icon [icon]="'heart-broken'"></fa-icon>
+                    <span class="hidden-sm-down">{{likeBtnText}}</span>
+                </div>
+                <div *ngIf="!liked">
+                    <fa-icon [icon]="'star'"></fa-icon>
+                    <span class="hidden-sm-down">{{likeBtnText}}</span>
+                </div>
             </button>
 
 <!--            <mat-basic-audio-player [audioUrl]="msbapAudioUrl" [title]="msbapTitle" [autoPlay]="false" muted="muted"-->
