--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -119,6 +119,8 @@
                 </div>
             </div>
 
+            <jhi-scroll-top></jhi-scroll-top>
+
 <!--            <div *ngIf="postObjects?.length > 0">
                 <div infinite-scroll (scrolled)="loadPage(page + 1)" [infiniteScrollDisabled]="page >= links['last']" [infiniteScrollDistance]="0">
                     <div *ngFor="let postObject of postObjects">
