--- a/src/main/webapp/app/entities/post/post-detail.component.html
+++ b/src/main/webapp/app/entities/post/post-detail.component.html
@@ -1,7 +1,6 @@
 <div class="row justify-content-center">
     <div class="col-8">
         <div *ngIf="post">
-
             <div class="container posts-content">
                 <div class="row">
                     <div class="col-md-12">
@@ -22,7 +21,6 @@
                                                 Comments</h6>
                                         </div>
                                     </div>
-
                                 </div>
 
                                 <p class="card-text">
@@ -34,29 +32,8 @@
                                              alt="">
                                     </div>
                                     <div class="col-md-6">
-                                        <div *ngIf="audioFile" class="container">
-                                            <div class="row slidecontainer">
-                                                <div class="col-md-12" style="text-align: center">
-                                                    <span>{{audioFile.title}}</span>
-                                                </div>
-                                                <input #slide type="range" class="slider" min="0" [max]="state?.duration" step="0.1"
-                                                       [value]="state.currentTime ? state.currentTime : 0" (change)="onSliderChangeEnd(slide)">
-                                                <div class="col-md-6" style="text-align: left">
-                                                    {{ state?.readableCurrentTime }}
-                                                </div>
-                                                <div class="col-md-6" style="text-align: right">
-                                                    {{ state?.readableDuration }}
-                                                </div>
-                                            </div>
-                                            <div class="row center">
-                                                <button type="button" class="btn btn-info center" (click)="play()" [disabled]="state?.error"
-                                                        *ngIf="!state?.playing">
-                                                    <fa-icon [icon]="'play'"></fa-icon>
-                                                </button>
-                                                <button type="button" class="btn btn-info center" (click)="pause()" *ngIf="state?.playing">
-                                                    <fa-icon [icon]="'pause'"></fa-icon>
-                                                </button>
-                                            </div>
+                                        <div *ngIf="audioFile">
+                                            <jhi-post-player [audioFile]="audioFile"></jhi-post-player>
                                         </div>
                                         <div>
                                             <span>Tags: </span><br>
@@ -69,22 +46,15 @@
                             <div class="card-footer">
                                 <div class="row">
                                     <div class="center">
-                                        <button class="btn btn-primary" (click)="toggleComment()">
+                                        <button class="btn btn-primary" (click)="postCommentsComponent.toggleComment()">
                                             <fa-icon [icon]="'pen'"></fa-icon>
                                             <span class="hidden-sm-down">Write a comment</span>
                                         </button>
                                     </div>
                                     <div class="center">
-                                        <button class="btn btn-primary" (click)="likeOrDislikeAudioFile()">
-                                            <div *ngIf="liked">
-                                                <fa-icon [icon]="'heart-broken'"></fa-icon>
-                                                <span class="hidden-sm-down" jhiTranslate="soundgramApp.audioFile.dislike">{{likeBtnText}}</span>
-                                            </div>
-                                            <div *ngIf="!liked">
-                                                <fa-icon [icon]="'star'"></fa-icon>
-                                                <span class="hidden-sm-down" jhiTranslate="soundgramApp.audioFile.like">{{likeBtnText}}</span>
-                                            </div>
-                                        </button>
+                                        <jhi-like-audio [audioFile]="audioFile"
+                                                        (likeClicked)='onLikeClicked($event)'>
+                                        </jhi-like-audio>
                                     </div>
                                     <div class="center">
                                         <button type="submit"
@@ -93,73 +63,32 @@
                                             <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span
                                             jhiTranslate="entity.action.back"> Back</span>
                                         </button>
-                                        <div *ngIf="currentUser">
-                                            <button type="button"
-                                                    [routerLink]="['/post', post.id, 'edit']"
-                                                    class="btn btn-primary"
-                                                    [hidden]="currentUser.login !== post.user.login">
-                                                <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span
-                                                jhiTranslate="entity.action.edit"> Edit</span>
-                                            </button>
-                                            <button type="submit" (click)="deletePost(post)"
-                                                    class="btn btn-danger btn-sm"
-                                                    [hidden]="currentUser.login !== post.user.login">
-                                                <fa-icon [icon]="'times'"></fa-icon>
-                                                <span class="d-none d-md-inline"
-                                                      jhiTranslate="entity.action.delete">Delete</span>
-                                            </button>
-                                        </div>
+                                    </div>
+                                    <div *ngIf="currentUser" class="center">
+                                        <button type="button"
+                                                [routerLink]="['/post', post.id, 'edit']"
+                                                class="btn btn-primary"
+                                                [hidden]="currentUser.login !== post.user.login">
+                                            <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span
+                                            jhiTranslate="entity.action.edit"> Edit</span>
+                                        </button>
+                                    </div>
+                                    <div *ngIf="currentUser" class="center">
+                                        <button type="submit" (click)="deletePost(post)"
+                                                class="btn btn-danger btn-sm"
+                                                [hidden]="currentUser.login !== post.user.login">
+                                            <fa-icon [icon]="'times'"></fa-icon>
+                                            <span class="d-none d-md-inline"
+                                                  jhiTranslate="entity.action.delete">Delete</span>
+                                        </button>
                                     </div>
                                 </div>
-                                <div class="row" *ngIf="showCommentWindow">
-                                    <div class="card comment-card my-4">
-                                        <h6 class="card-header">Leave a Comment:</h6>
-                                        <div class="card-body">
-                                            <form>
-                                                <div class="form-group">
-                                                    <textarea [(ngModel)]="commentContent" name="txtarea"
-                                                              class="form-control" rows="3"></textarea>
-                                                </div>
-                                                <button class="btn btn-primary" (click)="addComment()">
-                                                    <fa-icon [icon]="'plus'"></fa-icon>
-                                                    <span class="hidden-sm-down">Submit comment</span>
-                                                </button>
-                                            </form>
-                                        </div>
-                                    </div>
-                                </div>
-                                <br><br>
-                                <div class="table-responsive" *ngIf="commentsAvatars?.length > 0">
-                                    <div *ngFor="let commentAvatar of commentsAvatars">
-                                        <div class="row mb-2">
-                                            <div class="col-md-3">
-                                                <img [src]="commentAvatar.avatar"
-                                                     class="d-block ui-w-60 rounded-circle" alt="">
-                                                <a [routerLink]="['/', commentAvatar.comment.user.login, 'view']">{{commentAvatar.comment.user.login}}</a>
-                                                <div class="text-muted small">{{commentAvatar.comment.date | date:'medium'}}</div>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <span>{{commentAvatar.comment.textContent}}</span>
-                                            </div>
-                                            <div *ngIf="currentUser" class="col-md-3">
-                                                <div [hidden]="currentUser.login !== commentAvatar.comment.user.login">
-                                                    <button type="submit"
-                                                            [routerLink]="['/comment', commentAvatar.comment.id, 'edit']"
-                                                            class="btn btn-primary btn-sm">
-                                                        <fa-icon [icon]="'pencil-alt'"></fa-icon>
-                                                        <span class="d-none d-md-inline"
-                                                              jhiTranslate="entity.action.edit">Edit</span>
-                                                    </button>
-                                                    <button type="submit" (click)="deleteComment(commentAvatar.comment)"
-                                                            class="btn btn-danger btn-sm">
-                                                        <fa-icon [icon]="'times'"></fa-icon>
-                                                        <span class="d-none d-md-inline"
-                                                              jhiTranslate="entity.action.delete">Delete</span>
-                                                    </button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                <div *ngIf="post && currentUser">
+                                    <!--<div class="col-md-8 center">-->
+                                    <jhi-post-comments [post]="post"
+                                                       [currentUser]="currentUser"
+                                    ></jhi-post-comments>
+                                    <!--</div>-->
                                 </div>
                             </div>
                         </div>
@@ -169,10 +98,3 @@
         </div>
     </div>
 </div>
-<!--<div class="row" *ngIf="post && currentUser">
-    <div class="col-md-8 center">
-        <jhi-post-comments #commentSection [post]="post"
-                           [currentUser]="currentUser"
-        ></jhi-post-comments>
-    </div>
-</div>-->
